--- a/app/src/main/res/layout/recyclerview_job_item.xml
+++ b/app/src/main/res/layout/recyclerview_job_item.xml
@@ -38,6 +38,7 @@
                 android:layout_alignParentTop="true"/>
 
         <TextView
+                android:id="@+id/price"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="33"
